bugfix: dro up from network menu were covered behind sidebar left

--- a/src/app/pages/explorer-page/components/network/network.component.scss
+++ b/src/app/pages/explorer-page/components/network/network.component.scss
@@ -4,6 +4,10 @@
   z-index: 30;
 }
 
+.overlay {
+  z-index: 200;
+}
+
 .fullscreen {
   position: absolute !important;
   top: 0 !important;
